Change to write string to ensure proper encoding